# Recyclers

./: .gitignore  Cargo.toml
assets/: planet.json
assets/models/props/1x1/: 1x1.gltf
assets/models/tree/: tree.gltf
assets/props/: plate_1x1.json  wheel.json
assets/shaders/clouds/: clouds.frag  clouds.frag~  clouds.vert
assets/shaders/planet/: #planet.vert#  planet.frag  planet.frag~  planet.vert
assets/shaders/simple/: simple.frag  simple.frag~  simple.vert
assets/shaders/trees/: simple.vert~  trees.frag  trees.vert
assets/shaders/water/: water.frag  water.frag~  water.vert
client/: Cargo.toml
client/src/: main.rs  main.rs~
client/src/base/: game_manager.rs  gltf_loader.rs  gltf_loader.rs~  mod.rs  planet.rs  planet.rs~  textures.rs
client/src/base/components/: camera.rs
client/src/base/network/: mod.rs
client/src/base/render/: ash_backend.rs  backend.rs  glium_backend.rs  glium_backend.rs~  mod.rs  shaders.rs
client/src/base/render/planet/: glium_render.rs  glium_render.rs~  mod.rs
client/src/base/systems/: mod.rs  player_controller.rs  player_controller.rs~
server/: Cargo.toml
server/src/: lib.rs  main.rs  planet.rs
server/src/base/: game_manager.rs  game_manager.rs~  gltf_loader.rs  mod.rs  mod.rs~  player.rs  player.rs~
server/src/base/components/: physics.rs  physics.rs~
server/src/base/props/: mod.rs  pickable.rs
server/src/base/systems/: physics.rs  physics.rs~
server/src/physics/: mod.rs
server/src/physics/collision/: chunk_triangles.rs~  manifold_generator.rs  manifold_generator.rs~  mod.rs  point_query.rs  tests.rs
shared/: Cargo.toml  Cargo.toml~
shared/src/: commands.rs  lib.rs  network.rs
shared/src/components/: drawable.rs  mod.rs  netsync.rs  parent.rs  transform.rs
shared/src/planet/: cache.rs  chunk.rs  mod.rs  procgen.rs  procgen.rs~
(+1 files in other folders)
